--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
         </div>
         <div class="input">
           <p class="let">Let's do this!</p>
-          <form id="form">
+          <form
+            id="form"
+            name="form"
+            action="x"
+            onsubmit="return validateForm()"
+          >
             <label for="firstname"
               >First Name
               <input type="text" id="firstname" name="firstname" required />
@@ -59,7 +64,7 @@
             </label>
             <label for="password"
               >Password
-              <input type="password" id="password" name="password" required />
+              <input type="password" id="password" name="password" />
             </label>
             <label for="passwordC"
               >Confirm Password
@@ -67,7 +72,6 @@
                 type="password"
                 id="confirmpassword"
                 name="confirmpassword"
-                required
               />
             </label>
           </form>
@@ -78,5 +82,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
